--- a/index.html
+++ b/index.html
@@ -13,6 +13,30 @@
 
 <body>
 
+    <header>
+        <section class="right">
+            <div class="logo"> <a href="#">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 691.4" width="40px" height="auto">
+                        <path
+                            d="M618.3 0C575.4 0 535.2 10.9 500 30 464.9 10.9 424.6 0 381.7 0H0v443.6c0 136.9 110.9 247.8 247.8 247.8h504.3c136.9 0 247.8-110.9 247.8-247.8V0H618.3zM247.8 647.8c-54.5 0-105.8-21.2-144.4-59.8-38.6-38.6-59.8-89.8-59.8-144.4V43.7h338.1c26.7 0 52.6 5.1 76.6 14.8-53.8 45.5-87.9 113.4-87.9 189.4v399.9H247.8zm166.3 0v-400c0-54.5 21.2-105.8 59.8-144.4 8.2-8.2 16.9-15.6 26.1-22.1 9.2 6.6 17.9 14 26.1 22.1 38.6 38.5 59.8 89.8 59.8 144.4v399.9H414.1zm542.2-204.2c0 54.5-21.3 105.8-59.8 144.4-38.6 38.6-89.8 59.8-144.4 59.8H629.6v-400c0-75.9-34.1-143.9-87.9-189.4 24-9.7 49.9-14.8 76.6-14.8h338.1v400z" />
+                        <path
+                            d="M301.8 534H159.1v-10.5h14.5V136.1h-14.5v-10.5h75.8v10.5h-14.5v387.3h35V411.5h46.4V534zM834.7 534H759v-10.5h14.5V136.1H759v-10.5h75.8v10.5h-14.5v387.3h14.5V534z" />
+                    </svg> </a> </div>
+            <a href="#">
+                <h3 class="logo-title">Lorem Ipsum <span>s.r.o.</span></h3>
+            </a>
+        </section>
+        <section class="left">
+            <ul>
+                <li><a href="#">O Nás</a></li>
+                <li><a href="#">Služby</a></li>
+                <li><a href="#">Portfolio</a></li>
+                <li><a href="#">Reference</a></li>
+                <li><a href="#">Kontakty</a></li>
+            </ul>
+        </section>
+    </header>
+
 </body>
 
 </html>
