--- a/index.html
+++ b/index.html
@@ -23,19 +23,35 @@
                             d="M301.8 534H159.1v-10.5h14.5V136.1h-14.5v-10.5h75.8v10.5h-14.5v387.3h35V411.5h46.4V534zM834.7 534H759v-10.5h14.5V136.1H759v-10.5h75.8v10.5h-14.5v387.3h14.5V534z" />
                     </svg> </a> </div>
             <a href="#">
-                <h3 class="logo-title">Lorem Ipsum <span>s.r.o.</span></h3>
+                <p class="logo-title">Lorem Ipsum <span>s.r.o.</span></p>
             </a>
         </section>
         <section class="left">
             <ul>
-                <li><a href="#">O Nás</a></li>
-                <li><a href="#">Služby</a></li>
-                <li><a href="#">Portfolio</a></li>
-                <li><a href="#">Reference</a></li>
-                <li><a href="#">Kontakty</a></li>
+                <li><a href="#">O nás</a></li>
+                <li><a href="#sluzby">Služby</a></li>
+                <li><a href="#portfolio">Portfolio</a></li>
+                <li><a href="#reference">Reference</a></li>
+                <li><a href="#kontakty">Kontakty</a></li>
             </ul>
         </section>
     </header>
+
+    <section class="about" id="about">
+        <h1>Lorem Ipsum s.r.o.</h1>
+        <p class="hero-description">Toto je verze webové stránky fiktivní společnosti Lorem Ipsum s.r.o. založena na
+            frameworku Bootstrap. Zde, v
+            tzv. Hero sekci, je prostor pro hlavní nadpis a pro stručný popis činnosti. Neměly by se však zde objevovat
+            dlouhé odstavce.</p>
+        <p class="version">Použitá knihovna: <span>Verze bez knihovny</span></p>
+        <a href='https://www.w3.org/' target="_blank"><button class="button-primary">W3C Home</button></a>
+        <a href='http://it.pedf.cuni.cz/' target="_blank"><button class="button-secondary">PeDF UK</button></a>
+        <div class="hero-img-container"><img src="/img/hero.jpg" alt="Hero image" class="hero-img"></div>
+    </section>
+    <hr class="special-hr">
+    <section class="sluzby" id="sluzby">
+        <h2>Služby</h2>
+    </section>
 
 </body>
 
