--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 
     <header>
-        <section class="right">
+        <div class="right">
             <div class="logo"> <a href="#">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 691.4" width="40px" height="auto">
                         <path
@@ -25,8 +25,8 @@
             <a href="#">
                 <p class="logo-title">Lorem Ipsum <span>s.r.o.</span></p>
             </a>
-        </section>
-        <section class="left">
+        </div>
+        <div class="left">
             <ul>
                 <li><a href="#">O nás</a></li>
                 <li><a href="#sluzby">Služby</a></li>
@@ -34,7 +34,7 @@
                 <li><a href="#reference">Reference</a></li>
                 <li><a href="#kontakty">Kontakty</a></li>
             </ul>
-        </section>
+        </div>
     </header>
 
     <section class="about" id="about">
@@ -48,9 +48,62 @@
         <a href='http://it.pedf.cuni.cz/' target="_blank"><button class="button-secondary">PeDF UK</button></a>
         <div class="hero-img-container"><img src="/img/hero.jpg" alt="Hero image" class="hero-img"></div>
     </section>
+
     <hr class="special-hr">
+
     <section class="sluzby" id="sluzby">
         <h2>Služby</h2>
+        <div class="card-group-sluzby">
+            <div class="sluzba-card">
+                <div class="sluzba-card-icon icon-bg-red">
+                    <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#FFF">
+                        <path d="M0 0h24v24H0zm10 5h4v2h-4zm0 0h4v2h-4z" fill="none" />
+                        <path
+                            d="M10 16v-1H3.01L3 19c0 1.11.89 2 2 2h14c1.11 0 2-.89 2-2v-4h-7v1h-4zm10-9h-4.01V5l-2-2h-4l-2 2v2H4c-1.1 0-2 .9-2 2v3c0 1.11.89 2 2 2h6v-2h4v2h6c1.1 0 2-.9 2-2V9c0-1.1-.9-2-2-2zm-6 0h-4V5h4v2z" />
+                    </svg>
+                </div>
+                <div class="sluzba-card-text">
+                    <h4>Nabízená služba 1</h4>
+                    <div class="sluzba-card-bot">
+                        <p class="sluzba-card-p">Odio eveniet qui enim nobis explicabo dolore. Ut mollitia et cumque ea
+                            quia possimus est
+                            eaque. Quod reiciendis officiis aspernatur.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="sluzba-card">
+                <div class="sluzba-card-icon icon-bg-blue">
+                    <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px"
+                        fill="#FFFFFF">
+                        <path d="M0 0h24v24H0z" fill="none" />
+                        <path d="M7 2v11h3v9l7-12h-4l4-8z" />
+                    </svg>
+                </div>
+                <div class="sluzba-card-text">
+                    <h4>Nabízená služba 2</h4>
+                    <div class="sluzba-card-bot">
+                        <p class="sluzba-card-p">Omnis laudantium architecto qui qui officia et. Cupiditate sunt itaque
+                            ex vitae ex vel et cumque. Harum architecto voluptas et quia.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="sluzba-card">
+                <div class="sluzba-card-icon icon-bg-green">
+                    <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px"
+                        fill="#FFFFFF">
+                        <path d="M0 0h24v24H0z" fill="none" />
+                        <path d="M3 13h8V3H3v10zm0 8h8v-6H3v6zm10 0h8V11h-8v10zm0-18v6h8V3h-8z" />
+                    </svg>
+                </div>
+                <div class="sluzba-card-text">
+                    <h4>Nabízená služba 3</h4>
+                    <div class="sluzba-card-bot">
+                        <p class="sluzba-card-p">Consequatur aperiam sed ex eligendi corrupti. Debitis et sit est ut
+                            nihil hic. Commodi nemo nemo aliquam placeat dolor culpa.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
 
 </body>
