--- a/index.html
+++ b/index.html
@@ -106,6 +106,38 @@
         </div>
     </section>
 
+    <section class="portfolio" id="portfolio">
+        <h2>Portfolio</h2>
+        <div class="card-group-portfolio">
+            <div class="portfolio-card">
+                <img src="/img/portfolio1.jpg" alt="1">
+                <p>Stručný popis prvního příkladu.</p>
+            </div>
+            <div class="portfolio-card">
+                <img src="/img/portfolio2.jpg" alt="1">
+                <p>Stručný popis druhého příkladu.</p>
+            </div>
+            <div class="portfolio-card">
+                <img src="/img/portfolio3.jpg" alt="1">
+                <p>Stručný popis třetího příkladu.</p>
+            </div>
+        </div>
+        <div class="card-group-portfolio">
+            <div class="portfolio-card">
+                <img src="/img/portfolio4.jpg" alt="1">
+                <p>Stručný popis čtvrtého příkladu.</p>
+            </div>
+            <div class="portfolio-card">
+                <img src="/img/portfolio5.jpg" alt="1">
+                <p>Stručný popis pátého příkladu.</p>
+            </div>
+            <div class="portfolio-card">
+                <img src="/img/portfolio6.jpg" alt="1">
+                <p>Stručný popis šestého příkladu.</p>
+            </div>
+        </div>
+    </section>
+
 </body>
 
 </html>
