--- a/index.html
+++ b/index.html
@@ -138,6 +138,22 @@
         </div>
     </section>
 
+    <section class="reference" id="reference">
+        <h2>Reference</h2>
+        <div class="card-group-reference">
+            <div class="reference-card">
+                <img src="/img/reference1.png" alt="1">
+                <p class="reference-citace">Vero provident tempore modi libero facilis ipsa.</p>
+                <p class="reference-autor">&mdash; Jan Novák, <span> Fiktivní firma s.r.o.</span></p>
+            </div>
+            <div class="reference-card">
+                <img src="/img/reference2.png" alt="1">
+                <p class="reference-citace">Eos est at aliquid quam maxime rem sint.</p>
+                <p class="reference-autor">&mdash; Jana Novotná, <span> Fiktivní firma 2 s.r.o.</span></p>
+            </div>
+        </div>
+        </section>
+
 </body>
 
 </html>
