--- a/index.html
+++ b/index.html
@@ -174,7 +174,6 @@
                 <a data-modal="modal-one"><button id="submit-button" class="button-primary">Odeslat
                         formulář</button></a>
             </div>
-
             <div class="modal" id="modal-one">
                 <div class="modal-bg modal-exit"></div>
                 <div class="modal-container">
@@ -183,9 +182,31 @@
                     <button class="modal-close modal-exit">X</button>
                 </div>
             </div>
-
         </form>
     </section>
+    <footer>
+        <div class="footer-content">
+            <div class="right">
+                <div class="logo"> <a href="#">
+                        <svg version="1.1" id="footerLogo" xmlns="http://www.w3.org/2000/svg" x="0" y="0" width="40"
+                            viewBox="0 0 533.5 368.9" xml:space="preserve">
+                            <style>
+                                .st0 {
+                                    fill: #fff
+                                }
+                            </style>
+                            <path class="st0"
+                                d="M329.9 0c-22.8 0-44.3 5.8-63.1 16C248 5.8 226.5 0 203.7 0H0v236.7c0 73 59.2 132.2 132.2 132.2h269.1c73 0 132.2-59.2 132.2-132.2V0H329.9zM132.2 345.6c-29.1 0-56.5-11.3-77-31.9-20.6-20.6-31.9-47.9-31.9-77V23.3h180.4c14.2 0 28.1 2.7 40.9 7.9-28.7 24.3-46.9 60.5-46.9 101v213.4h-65.5zm88.8 0V132.2c0-29.1 11.3-56.5 31.9-77 4.4-4.4 9-8.3 13.9-11.8 4.9 3.5 9.6 7.4 13.9 11.8 20.6 20.6 31.9 47.9 31.9 77v213.4H221zm289.3-108.9c0 29.1-11.3 56.5-31.9 77-20.6 20.6-47.9 31.9-77 31.9H336V132.2c0-40.5-18.2-76.8-46.9-101 12.8-5.2 26.6-7.9 40.9-7.9h180.4l-.1 213.4z" />
+                            <path class="st0"
+                                d="M161 284.9H84.9v-5.6h7.8V72.6h-7.8V67h40.4v5.6h-7.8v206.7h18.7v-59.7H161v65.3zM445.4 284.9H405v-5.6h7.8V72.6H405V67h40.4v5.6h-7.8v206.7h7.8v5.6z" />
+                        </svg> </div>
+                <a href="#">
+                    <p class="logo-title footer-text">Lorem Ipsum <span>s.r.o.</span></p>
+                </a>
+            </div>
+            <p class="footer-text footer-text-info">Fiktivní společnost s.r.o., verze s frameworkem Bootstrap.</p>
+        </div>
+    </footer>
     <script src="modal.js"></script>
 </body>
 
