--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <p class="version">Použitá knihovna: <span>Verze bez knihovny</span></p>
         <a href='https://www.w3.org/' target="_blank"><button class="button-primary">W3C Home</button></a>
         <a href='http://it.pedf.cuni.cz/' target="_blank"><button class="button-secondary">PeDF UK</button></a>
-        <div class="hero-img-container"><img src="/img/hero.jpg" alt="Hero image" class="hero-img"></div>
+        <div class="hero-img-container"><img src="img/hero.jpg" alt="Hero image" class="hero-img"></div>
     </section>
 
     <hr class="special-hr">
@@ -110,29 +110,29 @@
         <h2>Portfolio</h2>
         <div class="card-group-portfolio">
             <div class="portfolio-card">
-                <img src="/img/portfolio1.jpg" alt="1">
+                <img src="img/portfolio1.jpg" alt="1">
                 <p>Stručný popis prvního příkladu.</p>
             </div>
             <div class="portfolio-card">
-                <img src="/img/portfolio2.jpg" alt="1">
+                <img src="img/portfolio2.jpg" alt="1">
                 <p>Stručný popis druhého příkladu.</p>
             </div>
             <div class="portfolio-card">
-                <img src="/img/portfolio3.jpg" alt="1">
+                <img src="img/portfolio3.jpg" alt="1">
                 <p>Stručný popis třetího příkladu.</p>
             </div>
         </div>
         <div class="card-group-portfolio">
             <div class="portfolio-card">
-                <img src="/img/portfolio4.jpg" alt="1">
+                <img src="img/portfolio4.jpg" alt="1">
                 <p>Stručný popis čtvrtého příkladu.</p>
             </div>
             <div class="portfolio-card">
-                <img src="/img/portfolio5.jpg" alt="1">
+                <img src="img/portfolio5.jpg" alt="1">
                 <p>Stručný popis pátého příkladu.</p>
             </div>
             <div class="portfolio-card">
-                <img src="/img/portfolio6.jpg" alt="1">
+                <img src="img/portfolio6.jpg" alt="1">
                 <p>Stručný popis šestého příkladu.</p>
             </div>
         </div>
@@ -142,12 +142,12 @@
         <h2>Reference</h2>
         <div class="card-group-reference">
             <div class="reference-card">
-                <img src="/img/reference1.png" alt="1">
+                <img src="img/reference1.png" alt="1">
                 <p class="reference-citace">Vero provident tempore modi libero facilis ipsa.</p>
                 <p class="reference-autor">&mdash; Jan Novák, <span> Fiktivní firma s.r.o.</span></p>
             </div>
             <div class="reference-card">
-                <img src="/img/reference2.png" alt="1">
+                <img src="img/reference2.png" alt="1">
                 <p class="reference-citace">Eos est at aliquid quam maxime rem sint.</p>
                 <p class="reference-autor">&mdash; Jana Novotná, <span> Fiktivní firma 2 s.r.o.</span></p>
             </div>
