Smooth scroll, úprava chyb. Firefox Flexbox Fix

--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                     <p class="logo-title footer-text">Lorem Ipsum <span>s.r.o.</span></p>
                 </a>
             </div>
-            <p class="footer-text footer-text-info">Fiktivní společnost s.r.o., verze s frameworkem Bootstrap.</p>
+            <p class="footer-text footer-text-info">Fiktivní společnost s.r.o., verze bez knihovny.</p>
         </div>
     </footer>
     <script src="modal.js"></script>
